--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
               disabled
             >
-               Авто
+            1Авто
             </button>
           </li>
           <li class="header__theme-menu-item">
