Внесены правки от автотестов - 3 итерация

--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
       <section class="header__text">
         <p class="header__text-paragraph title-decor">
           Что делать, когда не можешь делать ничего<br />Или почему нам так
-          сложно сконцентрироваться,<br />
-          особенно когда очень надо
+          сложно сконцентрироваться, особенно когда очень надо
         </p>
       </section>
       <!-- / header text  -->
@@ -213,48 +212,38 @@
         <p class="card_item-add-title title-decor card_item-add-title-pic">
           А можно в картинках?
         </p>
-        <ul class="picture-cards__items">
-          <li class="picture-cards__item picture-cards__item--sunset">
+        <section class="picture-cards">
             <img
               src="images/sunset.png"
               alt="Закат"
               loading="lazy"
-              class="picture-cards__item-picture"
+              class="picture-cards__sunset"
             />
-          </li>
-          <li class="picture-cards__item picture-cards__item--ice-cream">
             <img
               src="images/ice-cream.png"
               alt="Мороженое"
               loading="lazy"
-              class="picture-cards__item-picture"
+              class="picture-cards__ice-cream"
             />
-          </li>
-          <li class="picture-cards__item picture-cards__item--tape">
             <img
               src="images/tape.png"
               alt="Касета"
               loading="lazy"
-              class="picture-cards__item-picture"
+              class="picture-cards__tape"
             />
-          </li>
-          <li class="picture-cards__item picture-cards__item--books">
             <img
               src="images/books.png"
               alt="Книги"
               loading="lazy"
-              class="picture-cards__item-picture"
+              class="picture-cards__books"
             />
-          </li>
-          <li class="picture-cards__item picture-cards__item--street">
             <img
               src="images/street.png"
               alt="Улица"
               loading="lazy"
-              class="picture-cards__item-picture"
+              class="picture-cards__street"
             />
-          </li>
-        </ul>
+        </section>
       </section>
     </main>
     <footer>
