Внесены правки от автотестов - 8 итерация

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <ul class="cards__group-items">
+        <ul class="cards__group-items cards__group-items-advices">
           <li class="card_item">
             <h3 class="card_item-title title-decor">
               5 простых (на самом деле не очень) советов
@@ -208,7 +208,7 @@
         </ul>
       </section>
 
-      <section class="cards__group">
+      <!-- <section class="cards__group">
         <p class="card_item-add-title title-decor card_item-add-title-pic">
           А можно в картинках?
         </p>
@@ -244,10 +244,10 @@
               class="picture-cards__street"
             />
         </section>
-      </section>
+      </section> -->
     </main>
-    <footer>
+    <!-- <footer>
       <span class="footer-title decorated-zone">focus</span>
-    </footer>
+    </footer> -->
   </body>
 </html>
