Внесены правки от автотестов - 8 итерация

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         </ul>
       </section>
 
-      <!-- <section class="cards__group">
+      <section class="cards__group">
         <p class="card_item-add-title title-decor card_item-add-title-pic">
           А можно в картинках?
         </p>
@@ -244,10 +244,10 @@
               class="picture-cards__street"
             />
         </section>
-      </section> -->
+      </section>
     </main>
-    <!-- <footer>
+    <footer class="decorated-zone">
       <span class="footer-title decorated-zone">focus</span>
-    </footer> -->
+    </footer>
   </body>
 </html>
