--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   <body class="page">
     <header class="header decorated-zone">
       <span class="header__rec" aria-hidden="true">REC</span>
-      <!-- menu -->
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -48,28 +47,18 @@
           </li>
         </ul>
       </nav>
-      <!-- / menu -->
-      <!-- header title -->
-      <section class="header__title">
-        <h1 class="header__title-text">no focus</h1>
-      </section>
-      <!-- / header title -->
-      <!-- header text  -->
-      <section class="header__text">
-        <p class="header__text-paragraph title-decor">
-          Что делать, когда не можешь делать ничего<br />Или почему нам так
-          сложно сконцентрироваться, особенно когда очень надо
-        </p>
-      </section>
-      <!-- / header text  -->
+      <h1 class="header__title">no focus</h1>
+      <p class="header__text title-decor">
+        Что делать, когда не можешь делать ничего<br />Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+      </p>
     </header>
     <main class="cards">
-      <section class="cards__group cards__group-two-cols">
+      <section class="cards__group cards__group_why-advices">
         <h2 class="cards__group-title">Почему сосредоточиться так сложно</h2>
         <ul class="cards__group-items">
-          <li class="card_item">
-            <h3 class="card_item-title title-decor">Многозадачность</h3>
-            <p class="card_item-text">
+          <li class="card__item">
+            <h3 class="card__item-title title-decor">Многозадачность</h3>
+            <p class="card__item-text">
               Особенно сложно сосредоточиться, когда задач много и все они —
               важные. Где же легендарная многозадачность, когда она так нужна
               вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
@@ -83,9 +72,9 @@
               ошибаемся и быстро устаём.
             </p>
           </li>
-          <li class="card_item">
-            <h3 class="card_item-title title-decor">Дофамин</h3>
-            <p class="card_item-text">
+          <li class="card__item">
+            <h3 class="card__item-title title-decor">Дофамин</h3>
+            <p class="card__item-text">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
               нашей невозможности сосредоточиться замешана и полная
               противоположность стрессу — дофамин. Это вещество участвует в
@@ -102,10 +91,10 @@
         <h2 class="cards__group-title cards__group-title-left-text">
           Что снижает концентрацию внимания?
         </h2>
-        <ul class="cards__group-items cards__group-items-3cols">
-          <li class="card_item">
-            <h3 class="card_item-title title-decor">Многозадачность</h3>
-            <p class="card_item-text">
+        <ul class="cards__group-items cards__group-items_3-cols">
+          <li class="card__item">
+            <h3 class="card__item-title title-decor">Многозадачность</h3>
+            <p class="card__item-text">
               Как концентрация может снижаться из-за… концентрации? Любая
               стрессовая ситуация (и резко меняющийся мир в целом) заставляет
               наш мозг постоянно «сканировать» окружающую среду на предмет
@@ -114,9 +103,9 @@
               может не выдержать, если не давать ей отдохнуть.
             </p>
           </li>
-          <li class="card_item">
-            <h3 class="card_item-title title-decor">Еда</h3>
-            <p class="card_item-text">
+          <li class="card__item">
+            <h3 class="card__item-title title-decor">Еда</h3>
+            <p class="card__item-text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
               доставляют в мозг энергию и помогают ему лучше работать. Но уходит
               эта энергия также быстро, как и приходит. А мы в результате
@@ -125,9 +114,9 @@
               хотим ещё больше быстрых углеводов.
             </p>
           </li>
-          <li class="card_item">
-            <h3 class="card_item-title title-decor">Гаджеты</h3>
-            <p class="card_item-text">
+          <li class="card__item">
+            <h3 class="card__item-title title-decor">Гаджеты</h3>
+            <p class="card__item-text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
               наушниках — подкаст, а на компьютере фоном — ещё и видео с
               забавными утятами. В результате мозг пытается переключиться с
@@ -139,38 +128,38 @@
           </li>
         </ul>
       </section>
-      <section class="cards__group cards__group-two-cols">
+      <section class="cards__group cards__group_why-advices">
         <h2 class="cards__group-title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <ul class="cards__group-items cards__group-items-advices">
-          <li class="card_item">
-            <h3 class="card_item-title title-decor">
+        <ul class="cards__group-items">
+          <li class="card__item">
+            <h3 class="card__item-title title-decor">
               5 простых (на самом деле не очень) советов
             </h3>
           </li>
-          <li class="card_item">
-            <h3 class="card_item-title title-decor card_item-title-noaccent">
+          <li class="card__item">
+            <h4 class="card__item-title title-decor card__item-title-noaccent">
               Представьте небо и облака
-            </h3>
-            <p class="card_item-text">
+            </h4>
+            <p class="card__item-text">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
             </p>
           </li>
-          <li class="card_item">
-            <h3 class="card_item-title title-decor card_item-title-noaccent">
+          <li class="card__item">
+            <h4 class="card__item-title title-decor card__item-title-noaccent">
               Включите музыку
-            </h3>
-            <p class="card_item-text">
+            </h4>
+            <p class="card__item-text">
               Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист с «белым шумом» или нейромузыкой.
             </p>
           </li>
-          <li class="card_item">
-            <h3 class="card_item-title title-decor card_item-title-noaccent">
+          <li class="card__item">
+            <h4 class="card__item-title title-decor card__item-title-noaccent">
               Прогуляйтесь
-            </h3>
-            <p class="card_item-text">
+            </h4>
+            <p class="card__item-text">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
               <a
                 href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
@@ -183,22 +172,22 @@
               простая двадцатиминутная прогулка — тоже отличный вариант.
             </p>
           </li>
-          <li class="card_item">
-            <h3 class="card_item-title title-decor card_item-title-noaccent">
+          <li class="card__item">
+            <h3 class="card__item-title title-decor card__item-title-noaccent">
               Хорошо ешьте
             </h3>
-            <p class="card_item-text">
+            <p class="card__item-text">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
               которые препятствуют резким скачкам сахара в крови. Например, с
               высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
               чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
             </p>
           </li>
-          <li class="card_item">
-            <h3 class="card_item-title title-decor card_item-title-noaccent">
+          <li class="card__item">
+            <h3 class="card__item-title title-decor card__item-title-noaccent">
               Читайте
             </h3>
-            <p class="card_item-text">
+            <p class="card__item-text">
               Настоящие бумажные книги. Это правда помогает с концентрацией:
               чтобы прочитать пост в соцсети, достаточно нескольких минут или
               даже секунд. А вот интересная книга способна затянуть и на
@@ -209,10 +198,10 @@
       </section>
 
       <section class="cards__group">
-        <p class="card_item-add-title title-decor card_item-add-title-pic">
+        <h2 class="cards__group-title title-decor">
           А можно в картинках?
-        </p>
-        <section class="picture-cards">
+        </h2>
+        <div class="picture-cards">
             <img
               src="images/sunset.png"
               alt="Закат"
@@ -243,11 +232,11 @@
               loading="lazy"
               class="picture-cards__street"
             />
-        </section>
+        </div>
       </section>
     </main>
     <footer class="decorated-zone">
-      <span class="footer-title decorated-zone">focus</span>
+      <p class="footer-title decorated-zone">focus</p>
     </footer>
   </body>
 </html>
